--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ inc:
 
   # Google Fonts
   # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
-  google_font: 'Droid+Sans:400,700'
+  google_font: 'Roboto+Slab:400,700|Roboto:400,700'
 
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
