--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ inc:
 
  # Analytics
   analytics:
-    google: false # Add tracking code in _includes/_google-analytics.html
+    google: true # Add tracking code in _includes/_google-analytics.html
 
   # Google Fonts
   # eg. 'Droid+Sans:400,700|Droid+Serif:400,700'
